improvement: Update component markup and component styling (fix scrollbar problem)

--- a/data/styles/_component.scss
+++ b/data/styles/_component.scss
@@ -36,12 +36,11 @@ $sidebar-border-color: transparent;
     overflow: hidden;
     transform: translateX(-100%);
     transition: transform .2s ease-in-out;
-    width: 100%;
     box-shadow: 0px 2px 15px -5px rgba(0,0,0,.2);
 
     .sidebar-outer {
         display: block;
-        min-width: calc(100% + 30px);
+        min-width: 100%;
         overflow: hidden;
         overflow-y: scroll;
         position: relative;
@@ -53,9 +52,16 @@ $sidebar-border-color: transparent;
             padding: 0;
             list-style: none;
             position: relative;      
-            display:block;
-            width: calc(100% - 30px);
+            display: block;
+            width: 100%;
             
+        }
+    }
+
+    @media (max-width: $screen-xs-max) {
+        .sidebar-outer {
+            padding-right: 30px;
+            margin-right: -30px;
         }
     }
 
@@ -81,8 +87,7 @@ $sidebar-border-color: transparent;
     border-color: darken($sidebar-bg, 2%);
 
     // TO DO: convert to single class name
-    a,
-    .sidebar-item-container {
+    .sidebar-item-element {
         display: block;
         min-height: 60px;
         line-height: 20px;
@@ -102,7 +107,7 @@ $sidebar-border-color: transparent;
             padding: 15px 15px;
         }
     }
-    a {
+    a.sidebar-item-element {
         padding-right: 40px;
         .sidebar-item-icon {
             display: inline-block;
